posimark:mac half finished

--- a/posimarker/posimarker:mac/posimarker:mac-Info.plist
+++ b/posimarker/posimarker:mac/posimarker:mac-Info.plist
@@ -14,15 +14,27 @@
 			<key>CFBundleTypeIconFile</key>
 			<string></string>
 			<key>CFBundleTypeName</key>
-			<string>DocumentType</string>
+			<string>KML document</string>
 			<key>CFBundleTypeOSTypes</key>
 			<array>
 				<string>????</string>
 			</array>
 			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
+			<string>Viewer</string>
 			<key>NSDocumentClass</key>
-			<string>PODocument</string>
+			<string>POKMLDocument</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>kmz</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>KML-Zip document</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>NSDocumentClass</key>
+			<string>POKMLDocument</string>
 		</dict>
 	</array>
 	<key>CFBundleExecutable</key>
