--- a/posimarker/Podfile
+++ b/posimarker/Podfile
@@ -1,3 +1,13 @@
+platform :osx, "10.7"
 pod 'RaptureXML', '~> 1.0.1'
 pod 'zipzap', '~> 5.0'
 pod 'ISO8601DateFormatter', '~> 0.7'
+
+target 'posimarker:ios', :exclusive => false do
+    
+    platform :ios, "5.0"
+    pod 'RaptureXML', '~> 1.0.1'
+    pod 'zipzap', '~> 5.0'
+    pod 'ISO8601DateFormatter', '~> 0.7'
+
+end
